--- a/Web/assets/css/style.css
+++ b/Web/assets/css/style.css
@@ -1659,3 +1659,27 @@ section {
     padding-top: 5px;
   }
 }
+
+#eventdetails input{
+  background-color: #d1d1d1;
+}
+
+#createevent input{
+  background-color: #d1d1d1;
+}
+
+#betdetails input{
+  background-color: #d1d1d1;
+}
+
+.placebet input{
+  background-color: #d1d1d1;
+}
+
+#datetime {
+  font-size: 24px;
+  font-weight: bold;
+  color: #007bff; /* Bootstrap primary color */
+  text-align: center;
+  margin-top: 10px;
+}
